# fgo-drop-analyzer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
conf/: config-dist.ini
data/: freequest.csv  item.csv  test.csv
fgo_drop_analyzer/: app.py  create_report.py  data_classifier.py  data_cleaning.py  data_fetcher.py
tests/: test_data_cleaning.py
